test/error/recursion.imp
# Simple recursion error test

PROCEDURE recursive() IS
IN
    recursive();
END

PROGRAM IS
IN
    recursive();
END
